// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PassPhraseSettings Basic rendering renders correctly with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#393939",
      "borderRadius": 10,
      "fontSize": 14,
      "gap": 15,
      "padding": 10,
    }
  }
>
  <View
    testID="mock-radio-select"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontWeight": 400,
        }
      }
    >
      +1 random word
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#A3BB62"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          [
            {},
            {
              "backgroundColor": "#666666",
              "borderRadius": 16,
            },
          ],
        ]
      }
      thumbTintColor="#BADE5B"
      tintColor="#666666"
      value={false}
    />
  </View>
</View>
`;

exports[`PassPhraseSettings Snapshot tests matches snapshot when disabled 1`] = `
<View
  style={
    {
      "backgroundColor": "#393939",
      "borderRadius": 10,
      "fontSize": 14,
      "gap": 15,
      "padding": 10,
    }
  }
>
  <View
    testID="mock-radio-select"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontWeight": 400,
        }
      }
    >
      +1 random word
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={true}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#A3BB62"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          [
            {},
            {
              "backgroundColor": "#666666",
              "borderRadius": 16,
            },
          ],
        ]
      }
      thumbTintColor="#BADE5B"
      tintColor="#666666"
      value={false}
    />
  </View>
</View>
`;

exports[`PassPhraseSettings Snapshot tests matches snapshot with 24 words selected 1`] = `
<View
  style={
    {
      "backgroundColor": "#393939",
      "borderRadius": 10,
      "fontSize": 14,
      "gap": 15,
      "padding": 10,
    }
  }
>
  <View
    testID="mock-radio-select"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontWeight": 400,
        }
      }
    >
      +1 random word
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#A3BB62"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          [
            {},
            {
              "backgroundColor": "#666666",
              "borderRadius": 16,
            },
          ],
        ]
      }
      thumbTintColor="#BADE5B"
      tintColor="#666666"
      value={false}
    />
  </View>
</View>
`;

exports[`PassPhraseSettings Snapshot tests matches snapshot with all props set 1`] = `
<View
  style={
    {
      "backgroundColor": "#393939",
      "borderRadius": 10,
      "fontSize": 14,
      "gap": 15,
      "padding": 10,
    }
  }
>
  <View
    testID="mock-radio-select"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontWeight": 400,
        }
      }
    >
      +1 random word
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={true}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#A3BB62"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          [
            {},
            {
              "backgroundColor": "#666666",
              "borderRadius": 16,
            },
          ],
        ]
      }
      thumbTintColor="#BADE5B"
      tintColor="#666666"
      value={true}
    />
  </View>
</View>
`;

exports[`PassPhraseSettings Snapshot tests matches snapshot with default props 1`] = `
<View
  style={
    {
      "backgroundColor": "#393939",
      "borderRadius": 10,
      "fontSize": 14,
      "gap": 15,
      "padding": 10,
    }
  }
>
  <View
    testID="mock-radio-select"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontWeight": 400,
        }
      }
    >
      +1 random word
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#A3BB62"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          [
            {},
            {
              "backgroundColor": "#666666",
              "borderRadius": 16,
            },
          ],
        ]
      }
      thumbTintColor="#BADE5B"
      tintColor="#666666"
      value={false}
    />
  </View>
</View>
`;

exports[`PassPhraseSettings Snapshot tests matches snapshot with random word enabled 1`] = `
<View
  style={
    {
      "backgroundColor": "#393939",
      "borderRadius": 10,
      "fontSize": 14,
      "gap": 15,
      "padding": 10,
    }
  }
>
  <View
    testID="mock-radio-select"
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <Text
      style={
        {
          "color": "#F6F6F6",
          "fontFamily": "Inter",
          "fontSize": 14,
          "fontWeight": 400,
        }
      }
    >
      +1 random word
    </Text>
    <RCTSwitch
      accessibilityRole="switch"
      disabled={false}
      onChange={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onTintColor="#A3BB62"
      style={
        [
          {
            "height": 31,
            "width": 51,
          },
          [
            {},
            {
              "backgroundColor": "#666666",
              "borderRadius": 16,
            },
          ],
        ]
      }
      thumbTintColor="#BADE5B"
      tintColor="#666666"
      value={true}
    />
  </View>
</View>
`;
